--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-venv/
+/venv
+/instance
+/.pytest_cache
+/__pycache__
+/htmlcov
 .env
-development.env
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+env.bak
+venv.bak
+cloud.json
+.env
