--- a/development.env
+++ b/development.env
@@ -1,3 +1,3 @@
-export LIVEKIT_API_KEY=
-export LIVEKIT_API_SECRET=
+export LIVEKIT_API_KEY=APIeXzzP3No9DyE
+export LIVEKIT_API_SECRET=XqWsG2RvBR8kQ6dgfmRzcWNfGRe1eApy5D6aDdBSDBMB
 export GOOGLE_APPLICATION_CREDENTIALS="agent-backend/cloud.json"
