--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
+livekit-agents[openai]~=1.0
+livekit-agents[google]~=1.0
+livekit-plugins-noise-cancellation~=0.2
 python-dotenv
-livekit
-livekit-agents
-livekit-plugins-openai
-livekit-plugins-google
-livekit-plugins-noise-cancellation
+    
